# l9-codegraph

./: .coderabbit.yaml  .cursorrules  .env.required  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.prod  Makefile  README.md  bootstrap.sh  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  sonar-project.properties
.devcontainer/: P2_6_devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.semgrep/: semgrep-rules.yaml
chassis/: Dockerfile.chassis  __init__.py  action_registry.py  actions.py  audit.py  chassis_app.py  config.py  engine_boot.py  entrypoint.sh  errors.py  health.py  middleware.py  orchestrator.py  pii.py  router.py  types.py
config/: perplexity_audit.yaml
engine/: P2_3_features.json  P2_3_features.py  __init__.py  boot.py  features.json  features.py  hashing.py  logging.py  main.py  metrics.py  settings.py  transaction.py
observability/: 1_config_grafana_datasources.yml  1_config_otel-collector-config.yaml  1_config_prometheus.yml  1_docker-compose.observability.yml  1_observability_telemetry.py  4_grafana_dashboard_metrics.json  4_prometheus_config.yml  5_prometheus_alert_rules.yml  P2_4_grafana_dashboard.json  P2_4_prometheus_scrape.yml  P2_5_grafana_slo_dashboard.json  QW1_alloy_config.alloy  QW1_loki_config.yaml  QW4_docker_compose_otel.yml  QW4_otel_collector_sampling.yaml
scripts/: perplexity_audit_agent.py
templates/: dev.conf.template  styleguide.template.md
tests/: conftest.py  test_codegraph_unit.py  test_plangraph_unit.py
tools/: audit_dispatch.py  test.sh  (+3 more)
(+76 files in other folders)
